Fixed column wrap. Showing fewer songs.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
 .ui-widget {
     font-size: 20px;
 }
+
 .line {
     font-family: monospace;
     font-size: 16px;
+    break-inside: avoid-column;
 }
 
 .container-fluid {
@@ -17,7 +19,6 @@
 }
 .chords {
     display: block;
-    background-color: white;
     white-space: pre;
 }
 
@@ -25,6 +26,7 @@
     position:fixed;
     top: 0;
     right: 0;
+    background-color: white;
 }
 
 img {
